sign method